# UAUtilityClasses

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: config.h.in  ipc_managed_object.h  ipc_manager.h  logger.h  ua_mapped_class.h  ua_proxies.h  ua_proxies_callback.h  ua_proxies_typeconversion.h  ua_remoteinstance_map.h  udp_beacon.h
lib/: placeholder.md
model/: serverList.xml
src/: ipc_managed_object.cpp  ipc_manager.cpp  logger.cpp  ua_mapped_class.cpp  ua_proxies.cpp  ua_remoteinstance_map.cpp  udp_beacon.cpp
tools/: buildDependencies.sh  setup_ModuleIM.sh  setup_PackMLSimulator.sh  setup_open62541.sh
tools/UA_Mapped_Class_Generator/: README.md  XMLPreprocessor.py  cppClass_generator.py  cppfile_generator.py  generate_cppClasses.py  headerfile_generator.py  toolBox_generator.py  ua_builtin_types.py
tools/cmake/: Toolchain-arm-hf.cmake  Toolchain-arm.cmake
tools/pyUANamespace_CPPGen/: cppClass_generator.py  generate_cppClasses.py  ua_namespace.py  ua_node_types.py
